--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="container">
 <a class="logo" href="#">MiMarca</a>
 <nav class="nav" id="nav">
-<a href="#">Inicio</a>
+<a href="#">Inicio2</a>
 <a href="#features">Servicios</a>
 <a href="#about">Sobre</a>
 <a href="#contact">Contacto</a>
